force-app/main/default/objects/Disclosure__c/Disclosure__c.object-meta.xml
<CustomObject>
    <description>A record of initial disclosure related to an invention, technology, or intellectual property for Technology Transfer Starter.</description>
    <label>Disclosure</label>
    <nameField>
        <displayFormat>D{0000}</displayFormat>
        <label>D0000</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disclosures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>