force-app/main/default/objects/Disclosure__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A relationship to the individual inventor or researcher disclosing of initial technology.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Disclosures</relationshipLabel>
    <relationshipName>Disclosures</relationshipName>
    <type>Lookup</type>
</CustomField>