force-app/main/default/objects/Disclosure__c/fields/Disclosure_Description__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Description__c</fullName>
    <label>Disclosure Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>