force-app/main/default/objects/Disclosure__c/fields/Disclosure_Title__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Title__c</fullName>
    <label>Disclosure Title</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>