force-app/main/default/objects/Disclosure__c/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related technologies that currently exist and are in the transfer process or have been proccesed.</description>
    <label>Technology</label>
    <referenceTo>IP__c</referenceTo>
    <relationshipLabel>Disclosures</relationshipLabel>
    <relationshipName>Disclosures</relationshipName>
    <type>Lookup</type>
</CustomField>